# opengm

./: .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  requirements.txt
opengm/: __init__.py  __main__.py  main.py  opengm.py
opengm/plugins/: admins.py  base.py  msg_deletion.py  template_plugin.py
opengm/plugins/sql/: __init__.py  users.py
opengm/utils/: chat_status.py  extraction.py  plugins.py  redis.py
